Fix subreddit spacing

--- a/src/App.css
+++ b/src/App.css
@@ -483,6 +483,8 @@ button {
   display: flex;
   justify-content: center;
   align-items: center;
+  font-size: 2em;
+  overflow: hidden;
 }
 
 .validsubredditdetails {
@@ -502,6 +504,21 @@ button {
 
 .duplicatesubredditalert {
   grid-column-start: 4;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 2.5em;
+  color: red;
+}
+
+.exclamationcontainer {
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 4px solid red;
 }
 
 .formbuttons {
